tests/snapshots/examples_fixtures/type_system__failing__08_compile_identifier_type_mismatch.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/08_compile_identifier_type_mismatch.flx
== compile ==
failed (compile)
== diagnostics ==
--> compiler error[E055]: TYPE MISMATCH

Expected Int, got String.

  --> examples/type_system/failing/08_compile_identifier_type_mismatch.flx:2:14
  |
2 | let n: Int = value
  |              ^^^^^
  |              ----- initializer type is known at compile time

Help:
  binding initializer does not match type annotation
== stdout ==
<not executed>
